fixed spacing mobile ish

--- a/jakob.css
+++ b/jakob.css
@@ -182,11 +182,16 @@ html, body {
     }  
     .title {
       font-size: 58px;
-      margin-bottom: -20px;
+      margin-bottom: -6px;
+      margin-top: 48px;
     }
     .topleft img {
       width: 65px;
       height: 65px;
+    }
+
+    .logomain {
+      
     }
 
     #submit{
